testsuite/tests/annotations/should_fail/T19374c.hs
{-# LANGUAGE TypeOperators #-}
module T19347c where

data (%%%)
{-# ANN type (T19347c.%%%) "This is also an annotation" #-}
