testsuite/tests/annotations/should_fail/T19374c.stderr

T19374c.hs:5:15: error: parse error on input ‘T19347c.%%%’
